# pp5-property-olx

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt  tasks.py
backend/dev_utils/: apps.py
backend/dev_utils/management/commands/: generate_data.py
backend/drf_auth/: apps.py  serializers.py  tests.py  urls.py  views.py
backend/offers/: admin.py  models.py  serializer.py  serializers.py  urls.py  views.py
backend/pp5_property_olx/: asgi.py  settings.py  urls.py  wsgi.py
backend/scripts/: clean.sh  quicksetup.sh  wsl_migrate.sh
backend/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
frontend/: .dockerignore  .prettierrc  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js
frontend/src/lib/: api.ts  clickOutside.ts  constants.ts  getLocationString.ts  types.ts
frontend/src/lib/components/: ErrorAlertModal.svelte  Footer.svelte  LoadingSpinner.svelte  Map.svelte  Navbar.svelte  NavbarData.ts  OfferBrowserFilterForm.svelte  OfferGrid.svelte  OfferList.svelte
frontend/src/lib/stores/: error.ts  user.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/offers/: +page.svelte  +page.ts
frontend/src/routes/offers/[slug]/: +page.svelte  +page.ts
frontend/src/routes/offers/new/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/users/[slug]/: +page.svelte  +page.ts
