[tool.poetry]
name = "pp5-property-olx-backend"
version = "0.1.0"
description = ""
authors = ["Michał Szczurek <michalszczurek794@gmail.com>"]
readme = "README.md"
packages = [{include = "pp5_property_olx_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
