[tool.poetry]
name = "pp5-property-olx-backend"
version = "0.1.0"
description = ""
authors = ["Michał Szczurek <michalszczurek794@gmail.com>"]
readme = "README.md"
packages = [{include = "pp5_property_olx_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
django-cors-headers = "^3.13.0"
pillow = "^9.3.0"
geocoder = "^1.38.1"
python-dotenv = "^0.21.0"
djangorestframework = "^3.14.0"
d = "^0.2.2"
markdown = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
